--- a/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
@@ -6,7 +6,25 @@
         xmlns:local="clr-namespace:MultiMediaApplication"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="File">
+                <MenuItem Header="Import Media">
+                    <MenuItem Header="Video" Click="MenuItemVideo_Click"/>
+                    <MenuItem Header="Image" Click="MenuItemImage_Click"/>
+                </MenuItem>
+            </MenuItem>
+        </Menu>
+        <StackPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+            </Grid>
+        </StackPanel>
+    </DockPanel>
 </Window>
