--- a/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
@@ -26,7 +26,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TreeView x:Name="PlayListTreeView">
+                <TreeView x:Name="PlayListTreeView" SelectedItemChanged="PlayListTreeView_SelectedItemChanged">
                     
                 </TreeView>
             </Grid>
