--- a/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
@@ -25,10 +25,20 @@
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TreeView x:Name="PlayListTreeView" SelectedItemChanged="PlayListTreeView_SelectedItemChanged">
+                <TreeView x:Name="PlaylistTreeView" SelectedItemChanged="PlaylistTreeView_SelectedItemChanged" VerticalAlignment="Stretch">
                     
                 </TreeView>
+                <StackPanel x:Name="InitialEplinationStackPanel" Orientation="Horizontal" Grid.ColumnSpan="2" Grid.Row="1" Width="550">
+                    <TextBlock Text="Hi, please add folders to the"/>
+                    <TextBlock Text=" navigation area " FontWeight="Bold" />
+                    <TextBlock Text=" by clicking " FontWeight="Bold" />
+                    <TextBlock Text="File" FontWeight="Bold" />
+                    <TextBlock Text=" -> " />
+                    <TextBlock Text="Choose folders for navigation area" FontWeight="Bold" />
+                </StackPanel>
+                <ItemsControl x:Name="mediaItemsControl" ItemsSource="{Binding mediaList}" Grid.Column="1" />
             </Grid>
         </StackPanel>
     </DockPanel>
