--- a/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:uc="clr-namespace:MultiMediaApplication.UserControls"
         xmlns:local="clr-namespace:MultiMediaApplication"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
@@ -24,12 +25,11 @@
                     <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TreeView x:Name="PlaylistTreeView" SelectedItemChanged="PlaylistTreeView_SelectedItemChanged" VerticalAlignment="Stretch">
-                    
-                </TreeView>
+                <TreeView x:Name="PlaylistTreeView" SelectedItemChanged="PlaylistTreeView_SelectedItemChanged" VerticalAlignment="Stretch"/>
                 <StackPanel x:Name="InitialEplinationStackPanel" Orientation="Horizontal" Grid.ColumnSpan="2" Grid.Row="1" Width="550">
                     <TextBlock Text="Hi, please add folders to the"/>
                     <TextBlock Text=" navigation area " FontWeight="Bold" />
@@ -38,7 +38,7 @@
                     <TextBlock Text=" -> " />
                     <TextBlock Text="Choose folders for navigation area" FontWeight="Bold" />
                 </StackPanel>
-                <ItemsControl x:Name="mediaItemsControl" ItemsSource="{Binding mediaList}" Grid.Column="1" />
+                <ItemsControl x:Name="mediaItemsControl" Grid.Column="1"/>
             </Grid>
         </StackPanel>
     </DockPanel>
