--- a/ProgrammeringCSharp3/MultiMediaApplication/UserControls/MediaViewSelectionUserControl.xaml
+++ b/ProgrammeringCSharp3/MultiMediaApplication/UserControls/MediaViewSelectionUserControl.xaml
@@ -5,9 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MultiMediaApplication"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Margin="10" MouseLeftButtonUp="StackPanel_MouseLeftButtonUp">
-        <Image Source="{Binding MediaImageSource}"/>
-        <Label Content="{Binding MediaName}"/>
-    </StackPanel>
+             d:DesignHeight="300" d:DesignWidth="200"
+             Margin="10">
+    <Grid Margin="10" MouseLeftButtonUp="StackPanel_MouseLeftButtonUp">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        <Image Source="{Binding MediaImageSource}" MaxWidth="200" />
+        <Label Content="{Binding MediaName}" Grid.Row="1"/>
+    </Grid>
 </UserControl>
