--- a/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
+++ b/ProgrammeringCSharp3/MultiMediaApplication/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:uc="clr-namespace:MultiMediaApplication.UserControls"
         xmlns:local="clr-namespace:MultiMediaApplication"
+        xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <DockPanel>
@@ -38,7 +39,18 @@
                     <TextBlock Text=" -> " />
                     <TextBlock Text="Choose folders for navigation area" FontWeight="Bold" />
                 </StackPanel>
-                <ItemsControl x:Name="mediaItemsControl" Grid.Column="1"/>
+                <ItemsControl x:Name="mediaItemsControl" Grid.Column="1">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid Columns="2"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <uc:MediaViewSelectionUserControl MediaId="{Binding Id, Mode=TwoWay, diag:PresentationTraceSources.TraceLevel=High}" MediaName="{Binding Name, Mode=TwoWay}" MediaImageSource="{Binding SourceUrl, Mode=TwoWay, diag:PresentationTraceSources.TraceLevel=High}" MediaPreviewSource="{Binding PreviewUrl, Mode=TwoWay}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </Grid>
         </StackPanel>
     </DockPanel>
