--- a/ProgrammeringCSharp3/MultiMediaApplication/UserControls/MediaViewSelectionUserControl.xaml
+++ b/ProgrammeringCSharp3/MultiMediaApplication/UserControls/MediaViewSelectionUserControl.xaml
@@ -4,9 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MultiMediaApplication"
+             xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="200"
-             Margin="10">
+             Margin="10"
+             x:Name="Window">
     <Grid Margin="10" MouseLeftButtonUp="StackPanel_MouseLeftButtonUp">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -15,7 +17,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <Image Source="{Binding MediaImageSource}" MaxWidth="200" />
-        <Label Content="{Binding MediaName}" Grid.Row="1"/>
+        <Image Source="{Binding MediaImageSource, ElementName=Window}" MaxWidth="200" />
+        <Label Content="{Binding MediaName, ElementName=Window}" Grid.Row="1"/>
     </Grid>
 </UserControl>
