- Changed so that error message appears before adding media if on playlist selected - Reorganising dependency properties - Removed separate class for dependencyproperties, it can not be created in a separate class

--- a/ProgrammeringCSharp3/MultiMediaApplication/UserControls/MediaViewSelectionUserControl.xaml
+++ b/ProgrammeringCSharp3/MultiMediaApplication/UserControls/MediaViewSelectionUserControl.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <Image Source="{Binding MediaImageSource, ElementName=Window}" MaxWidth="200" />
+        <Image Source="{Binding MediaPreviewSource, ElementName=Window}" MaxWidth="200" />
         <Label Content="{Binding MediaName, ElementName=Window}" Grid.Row="1"/>
     </Grid>
 </UserControl>
